fix header alignment, colors on desktop, etc

--- a/devconnect-app/src/app/schedule/schedule.module.scss
+++ b/devconnect-app/src/app/schedule/schedule.module.scss
@@ -14,6 +14,6 @@
   }
 
   @media (min-width: 768px) {
-    background: linear-gradient(360deg, rgba(246, 182, 19, 0.15) 6.87%, rgba(255, 133, 166, 0.15) 14.79%, rgba(152, 148, 255, 0.15) 22.84%, rgba(116, 172, 223, 0.15) 43.68%, rgba(238, 247, 255, 0.15) 54.97%);
+    // background: linear-gradient(360deg, rgba(246, 182, 19, 0.15) 6.87%, rgba(255, 133, 166, 0.15) 14.79%, rgba(152, 148, 255, 0.15) 22.84%, rgba(116, 172, 223, 0.15) 43.68%, rgba(238, 247, 255, 0.15) 54.97%);
   }
 }
